
nvidia-graphics-drivers (450.172.01-1) UNRELEASED; urgency=medium

  * New upstream Tesla release 450.172.01 (2022-01-31).
    * Fixed CVE‑2022‑21813, CVE‑2022‑21814.
      https://nvidia.custhelp.com/app/answers/detail/a_id/5312
    - Fixed a bug that caused nvidia-drm.ko to crash when loading with
      DRM-KMS enabled (modeset=1) on Linux v5.14.

 -- Andreas Beckmann <anbe@debian.org>  Tue, 01 Feb 2022 22:33:16 +0100

nvidia-graphics-drivers (450.156.00-1) UNRELEASED; urgency=medium

  * New upstream Tesla release 450.156.00 (2021-10-26).
    - Fixed a bug that could cause the /proc/driver/nvidia/suspend power
      management interface to fail to preserve and restore video memory
      allocations when the NVreg_TemporaryFilePath module parameter for
      nvidia.ko specified an invalid path.

 -- Andreas Beckmann <anbe@debian.org>  Fri, 05 Nov 2021 12:11:07 +0100

nvidia-graphics-drivers (450.142.00-2) UNRELEASED; urgency=medium

  * Backport drm_device_has_pdev and set_current_state changes from 470.63.01
    to fix kernel module build for Linux 5.14.

 -- Andreas Beckmann <anbe@debian.org>  Tue, 21 Sep 2021 12:19:13 +0200

nvidia-graphics-drivers (450.142.00-1) UNRELEASED; urgency=medium

  * New upstream Tesla release 450.142.00 (2021-07-20).
    * Fixed CVE-2021-1093, CVE-2021-1094, CVE-2021-1095.
      https://nvidia.custhelp.com/app/answers/detail/a_id/5211
    - Fixed a bug that could result in blank displays when driving multiple
      displays at the same resolution using active DisplayPort dongles.

  [ Andreas Beckmann ]
  * Refresh patches.

 -- Andreas Beckmann <anbe@debian.org>  Fri, 23 Jul 2021 22:54:44 +0200

nvidia-graphics-drivers (450.119.04-1) UNRELEASED; urgency=medium

  * New upstream Tesla release 450.119.04 (2021-05-04).

 -- Andreas Beckmann <anbe@debian.org>  Thu, 20 May 2021 13:53:07 +0200

nvidia-graphics-drivers (450.119.03-1) UNRELEASED; urgency=medium

  * New upstream Tesla release 450.119.03 (2021-04-19).